--- a/gb/25/10/27/n14624083.md
+++ b/gb/25/10/27/n14624083.md
@@ -35,12 +35,17 @@
 <p>──转自正见网</p>
 <p>责任编辑：李梅#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14636773.md#1">小雪节气天气上升地气下降  不要掉以轻心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625691.md#1">立冬“闭藏”如何顺应天时补肾养精气？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/2/n14607254.md#1">深秋序曲：寒露节气道是无情还有情  一花健身美颜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/17/n14596754.md#1">秋分节气为什么宝贵？ 老子说天地之气莫大于和</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/7/n14068727.md#1">白露节气到 养生小心哪些禁忌“补露”怎么补？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/3/n14586680.md#1">七月十五中元节 怎么看待“鬼月”？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/23/n10659446.md#1">节气“处暑”是什么意思？ 处暑出伏中元添福！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/3/n14566136.md#1">秋老虎立秋到 秋天养生最重这一道</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/21/n10990583.md#1" target="_blank">林辉：岳飞忠魂千古颂 中共侮辱英雄可憎</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/23/n10871477.md#1" target="_blank">感恩节 来自西方人的最美好心愿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/26/n10513884.md#1" target="_blank">中共用战争的方式进行土改和镇反</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/27/n3973738.md#1" target="_blank">净仁：通向人类生命的真正幸福</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
