--- a/gb/25/10/23/n14622337.md
+++ b/gb/25/10/23/n14622337.md
@@ -12,12 +12,12 @@
 <p>注 1.“闭户自精”的意思是关起门来专心致志地读书、研究。2.三余：适宜读书的三种余暇，指冬天、夜晚、阴雨天。</p>
 <p>责任编辑：林芳宇@</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/25/n11000789.md#1" target="_blank">共产暴政录：消灭思想先驱的“一打三反”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/15/n10977742.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(2) 历练的旅程</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10284443.md#1" target="_blank">林辉：受蒋介石赞赏的“苗王”被逼自杀背后</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/14/n11111708.md#1" target="_blank">美国务院人权新报告 多次提中共迫害法轮功</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
